--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
     camera-controls
-    shadow-intensity="1"
-    exposure="1"
+    shadow-intensity="0.8"
+    exposure="1.3"
+    tone-mapping="commerce"
+    environment-image="neutral"
     scale="0.4 0.4 0.4"
     min-camera-orbit="auto auto auto"
     max-camera-orbit="auto auto auto"
