--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     ar-placement="floor"
     camera-controls
     shadow-intensity="1"
-    exposure="3.5"
+    exposure="1"
+    brightness="1.3"
     tone-mapping="commerce"
     environment-image="neutral"
     scale="0.4 0.4 0.4"
