--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
     camera-controls
-    shadow-intensity="0.5"
-    exposure="1.6"
+    shadow-intensity="0.3"
+    exposure="2"
+    environment-intensity="1.4"
     tone-mapping="commerce"
     environment-image="neutral"
     scale="0.4 0.4 0.4"
