--- a/index.html
+++ b/index.html
@@ -37,16 +37,14 @@
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
     camera-controls
-    shadow-intensity="0.3"
-    exposure="2"
-    environment-intensity="1.4"
+    shadow-intensity="0.25"
+    exposure="2.2"
     tone-mapping="commerce"
-    environment-image="neutral"
-    scale="0.4 0.4 0.4"
-    min-camera-orbit="auto auto auto"
-    max-camera-orbit="auto auto auto"
+    environment-image="legacy"
+    environment-intensity="1.6"
+    camera-orbit="0deg 75deg 1.2m"
     style="width:100%; height:80vh;">
-  </model-viewer>
+</model-viewer>
 
 </body>
 
