--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
   </div>
 
   <model-viewer
-    src="chocopastry.glb"
+    src="white_donut.glb"
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
     camera-controls
-    shadow-intensity="0.25"
-    exposure="2.2"
-    tone-mapping="commerce"
-    environment-image="legacy"
-    environment-intensity="1.6"
-    camera-orbit="0deg 75deg 1.2m"
+    shadow-intensity="1"
+    exposure="1"
+    scale="0.4 0.4 0.4"
+    min-camera-orbit="auto auto auto"
+    max-camera-orbit="auto auto auto"
     style="width:100%; height:80vh;">
-</model-viewer>
+  </model-viewer>
+
 
 </body>
 
