--- a/index.html
+++ b/index.html
@@ -28,23 +28,22 @@
 <body>
 
   <div class="instructions">
-    Drag with two fingers to rotate •  Pinch to zoom in zoom out •  Tap icon below to "View in your space"
+    Drag with wo fingers to rotate •  Pinch to zoom in zoom out •  Tap icon below to "View in your space"
   </div>
 
   <model-viewer
-    src="white_donut.glb"
+    src="chocopastry.glb"
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
     camera-controls
     shadow-intensity="0.6"
-    exposure="1.4"
+    exposure="1.5"
     scale="0.4 0.4 0.4"
     min-camera-orbit="auto auto auto"
     max-camera-orbit="auto auto auto"
     style="width:100%; height:80vh;">
   </model-viewer>
-
 
 </body>
 
