--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
   <div class="instructions">
-    Drag with wo fingers to rotate •  Pinch to zoom in zoom out •  Tap icon below to "View in your space"
+    Drag with two fingers to rotate •  Pinch to zoom in zoom out •  Tap icon below to "View in your space"
   </div>
 
   <model-viewer
@@ -38,7 +38,7 @@
     ar-placement="floor"
     camera-controls
     shadow-intensity="1"
-    exposure="1"
+    exposure="3"
     scale="0.4 0.4 0.4"
     min-camera-orbit="auto auto auto"
     max-camera-orbit="auto auto auto"
