--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
  <model-viewer
-  src="chocopastry.glb"
+  src="chocopastry1.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   ar-placement="floor"
