--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
   </div>
 
  <model-viewer
-  src="chocopastry1.glb"
+  src="chocopastry.glb"
+
   ar
   ar-modes="scene-viewer webxr quick-look"
   ar-placement="floor"
+
   camera-controls
-  exposure="2.8"
+
+  exposure="3.2"
   tone-mapping="commerce"
-  shadow-intensity="0.4"
-  shadow-softness="1"
+
+  shadow-intensity="0.2"
+  shadow-softness="0.8"
+
   scale="0.3 0.3 0.3"
-  min-camera-orbit="auto auto auto"
-  max-camera-orbit="auto auto auto"
+
+  camera-orbit="0deg 75deg 1.2m"
 
   style="width:100%; height:80vh;">
 </model-viewer>
