--- a/index.html
+++ b/index.html
@@ -31,29 +31,20 @@
     Drag with two fingers to rotate •  Pinch to zoom in zoom out •  Tap icon below to "View in your space"
   </div>
 
- <model-viewer
-  src="chocopastry.glb"
-
-  ar
-  ar-modes="scene-viewer webxr quick-look"
-  ar-placement="floor"
-
-  camera-controls
-
-  exposure="3.2"
-  tone-mapping="commerce"
-
-  shadow-intensity="0.2"
-  shadow-softness="0.8"
-
-  scale="0.3 0.3 0.3"
-
-  camera-orbit="0deg 75deg 1.2m"
-
-  style="width:100%; height:80vh;">
-</model-viewer>
+  <model-viewer
+    src="redvelvet2mb.glb"
+    ar
+    ar-modes="scene-viewer webxr quick-look"
+    ar-placement="floor"
+    camera-controls
+    shadow-intensity="1"
+    exposure="1"
+    scale="2 2 2"
+    min-camera-orbit="auto auto auto"
+    max-camera-orbit="auto auto auto"
+    style="width:100%; height:80vh;">
+  </model-viewer>
 
 </body>
 
 </html>
-
