--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <model-viewer
-    src="redvelvet2mb.glb"
+    src="chocom.glb"
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
