--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
   </div>
 
   <model-viewer
-    src="chocom.glb"
-    ar
-    ar-modes="scene-viewer webxr quick-look"
-    ar-placement="floor"
-    camera-controls
-    shadow-intensity="1"
-    exposure="1"
-    scale="2 2 2"
-    min-camera-orbit="auto auto auto"
-    max-camera-orbit="auto auto auto"
-    style="width:100%; height:80vh;">
-  </model-viewer>
+  src="chocom.glb"
+  ar
+  ar-modes="scene-viewer webxr quick-look"
+  ar-placement="floor"
+  camera-controls
+  environment-image="neutral"
+  skybox-image="neutral"
+  exposure="1.2"
+  shadow-intensity="0.6"
+  shadow-softness="1"
+  camera-orbit="0deg 75deg 1m"
+  field-of-view="35deg"
+  style="width:100%; height:80vh;">
+</model-viewer>
+
 
 </body>
 
