--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <model-viewer
-  src="chocom.glb"
+  src="chocom1.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   ar-placement="floor"
